// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingList component add new item 1`] = `
"<ul class=\\"shopping-list\\"><li class=\\"done\\">
      Beer
      <button>Done</button></li><li class=\\"\\">
      Milk
      <button>Done</button></li><li class=\\"\\">
      Apple
      <button>Done</button></li><li class=\\"\\">
      NEW ITEM
      <button>Done</button></li> <input type=\\"text\\" id=\\"newItem\\"><button id=\\"addBtn\\">+</button></ul>"
`;

exports[`ShoppingList component done click 1`] = `
"<ul class=\\"shopping-list\\"><li class=\\"done\\">
      Beer
      <button>Done</button></li><li class=\\"\\">
      Milk
      <button>Done</button></li><li class=\\"done\\">
      Apple
      <button>Done</button></li> <input type=\\"text\\" id=\\"newItem\\"><button id=\\"addBtn\\">+</button></ul>"
`;

exports[`ShoppingList component snapshot 1`] = `
"<ul class=\\"shopping-list\\"><li class=\\"done\\">
      Beer
      <button>Done</button></li><li class=\\"\\">
      Milk
      <button>Done</button></li><li class=\\"\\">
      Apple
      <button>Done</button></li> <input type=\\"text\\" id=\\"newItem\\"><button id=\\"addBtn\\">+</button></ul>"
`;

exports[`ShoppingList component snapshot 2`] = `
"<ul class=\\"shopping-list\\"><li class=\\"done\\">
      Beer
      <button>Done</button></li><li class=\\"done\\">
      Milk
      <button>Done</button></li><li class=\\"\\">
      Apple
      <button>Done</button></li> <input type=\\"text\\" id=\\"newItem\\"><button id=\\"addBtn\\">+</button></ul>"
`;

exports[`true 1`] = `true`;
